Gives rough design to the cocktails page

--- a/cocktails.html
+++ b/cocktails.html
@@ -15,12 +15,31 @@
         </ul>
         <div class = "recipes">
             <div class = "cocktail">
-                <img src="img/mojito.jpg" alt="Glass of Mojito">
-                <ul>
-                    <li>2 oz Rum</li>
-                    <li>1 oz Lime Juice</li>
-                    <li>1 oz <a href="syrups.html">Simple Syrup</a></li>
-                </ul>
+                <img class="cocktail-pic" src="img/mojito.jpg" alt="Glass of Mojito">
+                <p>Mojito</p>
+            </div>
+            <div class = "cocktail">
+                <img class="cocktail-pic" src="img/maitai.jpg" alt="Glass of Mai Tai">
+                <p>Mai-Tai</p>
+            </div>
+            <div class = "cocktail">
+                <img class="cocktail-pic" src="img/daiquiri.jpg" alt="Glass of Daiquiri">
+                <p>Daiquiri</p>
+            </div>
+            <div class = "cocktail">
+                <img class="cocktail-pic" src="img/zombie.jpg" alt="Glass of Zombie">
+                <p>Zombie</p>
+            </div>
+            <div class = "cocktail">
+                <img class="cocktail-pic" src="img/margarita.jpg" alt="Glass of Margarita">
+                <p>Margarita</p>
+            </div><div class = "cocktail">
+                <img class="cocktail-pic" src="img/bramble.jpg" alt="Glass of Bramble">
+                <p>Bramble</p>
+            </div>
+            <div class = "cocktail">
+                <img class="cocktail-pic" src="img/old-fashioned.jpg" alt="Glass of Old-Fashioned">
+                <p>Old-Fashioned</p>
             </div>
         </div>
     </body>
