--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <body>
         <div class = "banner"></div>
         <!-- <img class="banner" src="./img/banner.jpg" alt="Dark bar with bottles"> -->
-        <ul class= "menu-bar">
-            <li class = "menu-item"><a class ="menu-link" href="index.html">Home</a></li>
-            <li class = "menu-item"><a class ="menu-link" href="cocktails.html">Cocktails</a></li>
-            <li class = "menu-item"><a class ="menu-link" href="syrups.html">Syrups</a></li>
+        <nav>
+            <ul class= "menu-bar">
+                <li class = "menu-item"><a class ="menu-link" href="index.html">Home</a></li>
+                <li class = "menu-item"><a class ="menu-link" href="cocktails.html">Cocktails</a></li>
+                <li class = "menu-item"><a class ="menu-link" href="syrups.html">Syrups</a></li>
         </ul>
+        </nav>
     </body>
 </html>
